add 'open in a new tab' icon

--- a/static/index.html
+++ b/static/index.html
@@ -180,8 +180,12 @@
                     </div>
                     <button class="btn" id="add-logs-to-db-btn" class="mx-3"><span><img
                                 src="./assets/dashbaord-white-icon.svg" alt=""></span></button>
-                    <button class="btn mx-2" id="alert-from-logs-btn"><span><img src="./assets/alerting-white-icon.svg"
-                                alt=""></span></button>
+                    <button class="btn mx-2" id="alert-from-logs-btn">
+                        <span>
+                            <img src="./assets/alerting-white-icon.svg" alt="">
+                            <img src="assets/arrow-up-right-from-square.svg">
+                        </span>
+                    </button>
                 </div>
                 <div id="views-container">
                     <div class="btn-group" role="group" id="log-view">
