--- a/static/index.html
+++ b/static/index.html
@@ -54,7 +54,7 @@
             <div id = "custom-code-tab" class="custom-code-tab">
                 <ul class="tab-list">
                     <li class="tab-li tab-li-query" id = "tab-title1"><a href="#tabs-1" class="custom-query-builder">Query Builder</a></li>
-                    <li class="tab-li tab-li-code" id = "tab-title2"><a href="#tabs-2"  class="custom-query-builder">Code</a></li>
+                    <li class="tab-li tab-li-code" id = "tab-title2"><a href="#tabs-2"  class="custom-query-builder">Free Text</a></li>
                 </ul>
                 <div id = "tabs-1">
                     <div class="query-box">
