--- a/static/index.html
+++ b/static/index.html
@@ -25,7 +25,10 @@
     <link rel="stylesheet" href="./css/lib/all.min.css" />
     <link rel="stylesheet" href="./css/lib/ag-grid.min.css" />
     <link rel="stylesheet" href="./css/lib/jquery-ui.min.css" />
+    <link rel="stylesheet" href="./css/lib/jquery.tagsinput.min.css" />
+    <link rel="stylesheet" href="./css/lib/jquery-ui.min.css" />
     <link rel="stylesheet" href="./css/siglens.css" />
+    <link rel="stylesheet" href="./css/query-builder.css" />
 
     <script src="https://cdn.jsdelivr.net/npm/uuid@8.3.2/dist/umd/uuidv4.min.js"></script>
     <script src="./js/lib/lodash.min.js"></script>
@@ -47,39 +50,101 @@
         <div id="app-side-nav" class="active">
         </div>
 
-        <div id="dashboard">
-            <div id="filter-container">
-                <div class="position-relative search-bar-container">
-                    <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip" id="info-icon-sql"
-                        style="display: none;" title=' SELECT MAX(latency), COUNT(city) FROM `*` GROUP BY country, gender LIMIT 10
-                        SELECT * FROM `ind-0`
-                        SELECT * FROM `ind-0` ORDER BY latency ASC
-                        SELECT first_name AS firstnames, country AS origincountry FROM `ind-0`
-                        SELECT MAX(latency), COUNT(city) FROM `*` WHERE gender = male GROUP BY country LIMIT 10
-                        SELECT * FROM `*` WHERE app_name = Wheataccount AND gender = male LIMIT 10'>
-
-                    </i>
-                    <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip" id="info-icon-logQL"
-                        style="display: none;" title=' {app="mysql",name="mysql-backup"}
-                        {job="mysql"} |= "error"
-                        {name="cassandra"} |~ error=\w+
-                        {job="mysql"} |= "error" != "timeout"
-                        {job="mysql"} |= "error" | json | line_format "&lbrace;{.err}&rbrace;"
-                        '>
-                    </i>
-                    <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip" id="info-icon-spl"
-                        style="display: block;" title=' app_version!=2.14.2 AND weekday=T*day
-                        city=Boston | stats count, avg(latency) BY weekday, http_method
-                        city=Boston | stats avg(latency) AS Avg BY weekday | eval Millis=Avg / 1000, Millis=Millis . " ms"
-                        city=Boston | ```This is a comment``` fields http*
-                        http_method=POST | regex city="^[a-zA-Z]+\s[a-zA-Z]+$" | fields city
-                        city=Boston | stats count AS Count BY weekday | where Count / 2 > 6 OR weekday = "Saturday"
-                        '>
-                    </i>
-                    <input class="form-control" id="filter-input"
-                        placeholder="Enter your SPL query here, or click the 'i' icon for examples" type="text">
-                    <span class="clear-icon" id="clearInput" title="Clear"></span>
+        <div id="dashboard" class="dashboard-box">
+            <div id = "custom-code-tab" class="custom-code-tab">
+                <ul class="tab-list">
+                    <li class="tab-li tab-li-query" id = "tab-title1"><a href="#tabs-1" class="custom-query-builder">Query Builder</a></li>
+                    <li class="tab-li tab-li-code" id = "tab-title2"><a href="#tabs-2"  class="custom-query-builder">Free Text</a></li>
+                </ul>
+                <div id = "tabs-1">
+                    <div class="query-box">
+                        <input class="form-control query-text" id="query-input" type="text" disabled="disabled">
+                        <div class="search-img" id="query-builder-btn"> </div>
+                    </div>
+                    <div class="filter-info">
+                        <div class="query-builder-text">Query Builder</div>
+                        <div id="filter-container">
+                            <div class="filter-con">
+                                <div class="filter-box" id="filter-box-1">
+                                    <ul id="tags" class="tags-list"></ul>
+                                    <button id="add-con" class="add-con btn">+</button>
+                                </div>
+                                <div class="add-filter" id="add-filter">
+                                    <input id="column-first" class="column-first" type="hidden" />
+                                    <input id="symbol" class="symbol" type="hidden" />
+                                    <input id="value-first" class="value-first" type="hidden" />
+                                    <button id="completed" class="completed btn"></button>
+                                    <button id="cancel-enter" class="cancel-enter btn">x</button>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="display-rule">
+                            <div class="filter-con second-enter">
+                                <div class="filter-box" id="filter-box-2">
+                                    <ul id="tags-second" class="tags-list"></ul>
+                                    <button id="add-con-second" class="add-con btn">+</button>
+                                </div>
+                                <div class="add-filter add-filters" id="add-filter-second">
+                                    <input id="column-second" class="column-first" type="hidden" />
+                                    <input id="value-second" class="value-first" type="hidden" />
+                                    <button id="completed-second" class="completed btn"></button>
+                                    <button id="cancel-enter-second" class="cancel-enter btn">x</button>
+                                </div>
+                            </div>
+                            <div class="group-by-reminder">Group by</div>
+                            <div class="filter-con third-enter">
+                                <div class="filter-box third-box"  id="filter-box-3">
+                                    <ul id="tags-third" class="tags-list"></ul>
+                                    <button id="add-con-third" class="add-con btn">+</button>
+                                </div>
+                                <div class="add-filter add-third" id="add-filter-third">
+                                    <input id="column-third" class="column-third" type="hidden" placeholder="Group by columns" />
+                                    <button id="cancel-enter-third" class="cancel-enter btn">x</button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 </div>
+                <div id = "tabs-2">
+                    <div class="filter-container">
+                        <div class="position-relative search-bar-container">
+                            <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip" id="info-icon-sql" style="display: none;"
+                                title=' SELECT MAX(latency), COUNT(city) FROM `*` GROUP BY country, gender LIMIT 10
+                                                                    SELECT * FROM `ind-0`
+                                                                    SELECT * FROM `ind-0` ORDER BY latency ASC
+                                                                    SELECT first_name AS firstnames, country AS origincountry FROM `ind-0`
+                                                                    SELECT MAX(latency), COUNT(city) FROM `*` WHERE gender = male GROUP BY country LIMIT 10
+                                                                    SELECT * FROM `*` WHERE app_name = Wheataccount AND gender = male LIMIT 10'>
+                        
+                            </i>
+                            <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip" id="info-icon-logQL" style="display: none;"
+                                title=' {app="mysql",name="mysql-backup"}
+                                                                    {job="mysql"} |= "error"
+                                                                    {name="cassandra"} |~ error=\w+
+                                                                    {job="mysql"} |= "error" != "timeout"
+                                                                    {job="mysql"} |= "error" | json | line_format "&lbrace;{.err}&rbrace;"
+                                                                    '>
+                            </i>
+                            <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip" id="info-icon-spl" style="display: block;"
+                                title=' app_version!=2.14.2 AND weekday=T*day
+                                                                    city=Boston | stats count, avg(latency) BY weekday, http_method
+                                                                    city=Boston | stats avg(latency) AS Avg BY weekday | eval Millis=Avg / 1000, Millis=Millis . " ms"
+                                                                    city=Boston | ```This is a comment``` fields http*
+                                                                    http_method=POST | regex city="^[a-zA-Z]+\s[a-zA-Z]+$" | fields city
+                                                                    city=Boston | stats count AS Count BY weekday | where Count / 2 > 6 OR weekday = "Saturday"
+                                                                    '>
+                            </i>
+                            <input class="form-control" id="filter-input"
+                                placeholder="Enter your SPL query here, or click the 'i' icon for examples" type="text">
+                            <span class="clear-icon" id="clearInput" title="Clear"></span>
+                        </div>
+                        <div class="text-end">
+                            <button class="btn run-filter-btn" id="run-filter-btn" title="Run your search"></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="dropdown-box">
                 <div class="dropdown">
                     <button class="btn dropdown-toggle" type="button" id="query-language-btn" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown" title="Select Query Type">
@@ -94,9 +159,8 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle" type="button" id="index-btn" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown"
-                        title="Index Name to search on">
+                    <button class="btn dropdown-toggle" type="button" id="index-btn" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" data-bs-toggle="dropdown" title="Index Name to search on">
                         <span>Index</span>
                         <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
                         <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
@@ -106,9 +170,8 @@
                     </div>
                 </div>
                 <div class="dropdown">
-                    <button class="btn dropdown-toggle" type="button" id="date-picker-btn" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false" data-bs-toggle="dropdown"
-                        title="Pick the time window">
+                    <button class="btn dropdown-toggle" type="button" id="date-picker-btn" data-toggle="dropdown" aria-haspopup="true"
+                        aria-expanded="false" data-bs-toggle="dropdown" title="Pick the time window">
                         <span>Time Picker</span>
                         <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
                         <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
@@ -149,39 +212,29 @@
                                 <input type="time" id="time-end" value="00:00">
                             </div>
                             <div class="drp-buttons">
-                                <button class="applyBtn btn btn-sm btn-primary" id="customrange-btn"
-                                    type="button">Apply</button>
+                                <button class="applyBtn btn btn-sm btn-primary" id="customrange-btn" type="button">Apply</button>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="text-end">
-                    <button class="btn" id="run-filter-btn" title="Run your search">Search </button>
-                </div>
-
             </div>
-            <div id="hits-summary"></div>
             <div id="progress-div"></div>
 
             <div id="logs-view-controls">
-                <div id="save-query-div">
-                    <button class="btn" id="saveq-btn">Save Query</button>
-                    <div class="dropdown">
-                        <button class="btn dropdown-toggle" type="button" id="saveq-btn" data-toggle="dropdown" aria-haspopup="true"
+                <div id="save-query-div" class="save-query-div">
+                    <button class="btn saveq-btn below-btn-img" id="saveq-btn"></button>
+                    <button class="btn add-logs-to-db-btn below-btn-img" id="add-logs-to-db-btn" class="mx-3"></button>
+                    <button class="btn mx-2 alert-from-logs-btn below-btn-img" id="alert-from-logs-btn"></button>
+                    <div class="dropdown download-btn">
+                        <button class="btn dropdown-toggle download-all-logs-btn below-btn-img" type="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false" data-bs-toggle="dropdown" title="Select Query Type">
-                            <span>Download</span>
-                            <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
-                            <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
                         </button>
                         <div class="dropdown-menu box-shadow download-options" aria-labelledby="index-btn" id="save-query-options">
                             <li id="cvs-block" class="query-language-option">Download as CVS</li>
                             <li id="json-block" class="query-language-option">Download as JSON</li>
                         </div>
                     </div>
-                    <button class="btn" id="add-logs-to-db-btn" class="mx-3"><span><img
-                                src="./assets/dashbaord-white-icon.svg" alt=""></span></button>
-                    <button class="btn mx-2" id="alert-from-logs-btn"><span><img src="./assets/alerting-white-icon.svg"
-                                alt=""></span></button>
+                    <button class="btn show-record-intro-btn below-btn-img" id="show-record-intro-btn"></button>
                 </div>
                 <div id="views-container">
                     <div class="btn-group" role="group" id="log-view">
@@ -244,6 +297,13 @@
                         class="text ui-widget-content ui-corner-all">
                     <!-- Allow form submission with keyboard without duplicating the dialog button -->
                     <input type="submit" tabindex="-1" style="position:absolute; top:-1000px">
+                </fieldset>
+            </form>
+        </div>
+        <div class="show-record-popup" id="show-record-popup" title="record">
+            <form>
+                <fieldset>
+                    <div id="hits-summary" class="hits-summary"></div>
                 </fieldset>
             </form>
         </div>
@@ -319,6 +379,7 @@
     <script src="./js/point-click-search.js?cb=1_1_10"></script>
     <script src="./js/log-search.js?cb=1_1_10"></script>
     <script src="./js/dashboard-from-logs.js?cb=1_1_10"></script>
+    <script src="./js/query-builder.js"></script>
 </body>
 
 </html>
