--- a/static/service-health.html
+++ b/static/service-health.html
@@ -60,9 +60,17 @@
                 </div>
             </div>
             <div class="mt-4">
-                <input type="text" class="search-input" placeholder="Search Service">
+                <div id="db-search-container">
+                    <div>
+                        <input type="text" class="search-input" placeholder="Search Service">
                 <div id="ag-grid" class="ag-theme-mycustomtheme mt-5">
                 </div>
+                    </div>
+                    <div class="text-end">
+                        <button class="btn" id="run-search" title="Run your search">Search</button>
+                    </div>
+                </div>
+
             </div>
         </div>
 
