Alert and Contact Point UI  (#64)
* UI : All Alert and Alert Rule Screen

* UI : Contact Screen

* Alert Details UI

* Navbar UI

* Custom Labels Position

* Small Fix

* Removed Logout Button form MyOrg Screens

* Added Border To Graphs - Cluster Page

* nit

* Cluster Stats Chart

* Small Fix

* Fix : Contact Point Issue

* FIx : Contact Point Popup

* Fix : Update Contact Point

* Tooltips for "Evaluate Every" & "Evaluate For"

* Added "Tab Key" Order For Alert Form

* nit

* go code formatting

--- a/static/alert.html
+++ b/static/alert.html
@@ -60,15 +60,24 @@
             <!-- create alert form -->
             <div class="form-container">
                 <form id="alert-form">
+                    <div class="d-flex btn-container">
+                        <button class="btn" id="cancel-alert-btn" type="button" tabindex="9">Cancel</button>
+                        <button class="btn" id="save-alert-btn" type="submit" tabindex="10">Save</button>
+                    </div>
                     <div class="add-alert-form">
-                        <div>
-                            <label for="rule-name">Rule name</label>
-                            <input type="text" class="form-control" placeholder="Enter rule name" id="alert-rule-name"
-                                required>
+                        <div class="subsection-heading">
+                            <div class="circle">1</div>
+                            <div>Alert Rule</div>
                         </div>
-
-                        <div>
-                            <label for="query">Query</label>
+                        <div class="alert-form-subsection">
+                            <label for="alert-rule-name">Rule name</label>
+                            <input type="text" class="form-control" placeholder="Enter rule name" id="alert-rule-name" required tabindex="1">
+                        </div>
+                        <div class="subsection-heading">
+                            <div class="circle">2</div>
+                            <div>Query</div>
+                        </div>
+                        <div class="alert-form-subsection">
                             <div class="query-lang-container">
                                 <div>
                                     <button class="btn dropdown-toggle" type="button" id="alert-data-source"
@@ -131,7 +140,7 @@
                                 </div>
                             </div>
                             <div class="query-container position-relative">
-                                <input type="text" class="form-control" placeholder="Enter a query" id="query" required>
+                                <input type="text" class="form-control" placeholder="Enter a query" id="query" required tabindex="2">
 
                                 <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip"
                                     id="info-icon-spl" style="display: block;" title='city=Boston | stats count
@@ -139,75 +148,92 @@
                                 '></i>
                             </div>
                         </div>
-                        <label for="expression">Set the condition</label>
-                        <div class="condition-container">
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle" type="button" id="alert-condition"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                    data-bs-toggle="dropdown">
-                                    <span>Is above</span>
-                                    <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
-                                </button>
-                                <div class="dropdown-menu box-shadow alert-condition-options"
-                                    aria-labelledby="index-btn">
-                                    <li id="option-0" class="alert-condition-option active">Is above</li>
-                                    <li id="option-1" class="alert-condition-option">Is below</li>
-                                    <li id="option-2" class="alert-condition-option">Equal to</li>
-                                    <li id="option-3" class="alert-condition-option">Not equal to</li>
+                        <div class="subsection-heading">
+                            <div class="circle">3</div>
+                            <div>Set Condition</div>
+                        </div>
+                        <div class="alert-form-subsection">
+                            <div class="condition-container">
+                                <div class="dropdown">
+                                    <button class="btn dropdown-toggle" type="button" id="alert-condition"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                        data-bs-toggle="dropdown">
+                                        <span>Is above</span>
+                                        <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
+                                    </button>
+                                    <div class="dropdown-menu box-shadow alert-condition-options"
+                                        aria-labelledby="index-btn">
+                                        <li id="option-0" class="alert-condition-option active">Is above</li>
+                                        <li id="option-1" class="alert-condition-option">Is below</li>
+                                        <li id="option-2" class="alert-condition-option">Equal to</li>
+                                        <li id="option-3" class="alert-condition-option">Not equal to</li>
+                                    </div>
+                                </div>
+                                <div class="condition-value">
+                                    <input type="number" name="condition-value" min="0" step="1" id="threshold-value"
+                                        value="0" class="form-control" tabindex="3">
                                 </div>
                             </div>
-                            <div class="condition-value">
-                                <input type="number" name="condition-value" min="0" step="1" id="threshold-value"
-                                    value="0" class="form-control">
-                            </div>
-                        </div>
-                        <div class="evaluation-container">
-                            <div>
-                                <label for="evaluation-interval">Evaluate every</label>
-                                <input type="number" name="evaluate-every" min="0" id="evaluate-every" value="1"
-                                    class="form-control" step="any"></input>min<span
-                                    style="margin-left: 10px;">for</span>
-                                <input type="number" name="evaluate-every" id="evaluate-for" value="1" min="0"
-                                    class="form-control"></input>min
-                            </div>
-                        </div>
-                        <label for="custom-label">Custom Label</label>
-                        <div class="d-flex align-items-end mb-0">
-                            <div class="label-main-container mb-0">
-                                <div class="label-container d-flex align-items-center">
-                                    <input type="text" id="label-key" class="form-control" placeholder="Label name"
-                                        value="alerting"><span class="label-equal"> = </span> <input type="text"
-                                        id="label-value" class="form-control" placeholder="Value" value="true">
-                                </div>
-                            </div>
-                            <button class="add-label-container btn" type="button">Add Label</button>
-                        </div>
-                        <label for="contact-point">Notifications</label>
-                        <div class="notification-container">
-                            <div>
-                                Send to
-                            </div>
+                            <div class="evaluation-container position-relative">
+                                <div>
+                                    <label for="evaluation-interval position-relative" id="label-evaluate-every">Evaluate every
+                                        <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip"
+                                        id="info-evaluate-every" style="display: block;" title='How often the alert will be evaluated to see if it fires'>
+                                        </i>
+                                    </label>
 
-                            <div class="dropdown">
-                                <button class="btn dropdown-toggle" type="button" id="contact-points-dropdown"
-                                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
-                                    data-bs-toggle="dropdown">
-                                    <span>Choose</span>
-                                    <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
-                                </button>
-                                <div class="dropdown-menu box-shadow contact-points-options"
-                                    aria-labelledby="index-btn">
-                                    <li id="option-0" class="contact-points-option">Add New</li>
+                                    <input type="number" name="evaluate-every" min="0" id="evaluate-every" value="1" tabindex="4"
+                                        class="form-control" step="any"></input>min<span
+                                        style="margin-left: 10px;">for
+                                        <i class="fa fa-info-circle position-absolute info-icon" rel="tooltip"
+                                        id="info-evaluate-for" style="display: block;" title='Once condition is breached, alert will go into pending state. 
+                                        If it is pending for longer than the "for" value, it will become a firing alert.'>
+                                        </i>
+                                    </span>
+                                    <input type="number" name="evaluate-every" id="evaluate-for" value="1" min="0" tabindex="5"
+                                        class="form-control"></input>min
                                 </div>
                             </div>
                         </div>
-                        <div class="message-info" id="message-info">
-                            Message<textarea name="message" id="notification-msg" rows="4" class="message form-control"
-                                required></textarea>
+                        <div class="subsection-heading">
+                            <div class="circle">4</div>
+                            <div>Notification</div>
                         </div>
-                        <div class="btn-container">
-                            <button class="btn" id="cancel-alert-btn" type="button">Cancel</button>
-                            <button class="btn" id="save-alert-btn" type="submit">Save</button>
+                        <div class="alert-form-subsection">
+                            <div class="notification-container">
+                                <div>
+                                    Send to
+                                </div>
+                                <div class="dropdown">
+                                    <button class="btn dropdown-toggle" type="button" id="contact-points-dropdown"
+                                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"
+                                        data-bs-toggle="dropdown">
+                                        <span>Choose</span>
+                                        <img class="dropdown-arrow orange" src="assets/arrow-btn.svg">
+                                    </button>
+                                    <div class="dropdown-menu box-shadow contact-points-options"
+                                        aria-labelledby="index-btn">
+                                        <li id="option-0" class="contact-points-option">Add New</li>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="message-info" id="message-info">
+                                Message<textarea name="message" id="notification-msg" rows="4" class="message form-control" tabindex="6"
+                                    required></textarea>
+                            </div>
+                        </div>
+                        <div class="label-subsection">
+                            <label for="custom-label">Custom Label</label>
+                            <div class="d-flex align-items-end mb-0">
+                                <div class="label-main-container mb-0">
+                                    <div class="label-container d-flex align-items-center">
+                                        <input type="text" id="label-key" class="form-control" placeholder="Label name" tabindex="7"
+                                            value="alerting"><span class="label-equal"> = </span> <input type="text"
+                                            id="label-value" class="form-control" placeholder="Value" value="true" tabindex="8">
+                                    </div>
+                                </div>
+                                <button class="add-label-container btn" type="button">Add Label</button>
+                            </div>
                         </div>
                     </div>
                 </form>
