--- a/static/contacts.html
+++ b/static/contacts.html
@@ -74,13 +74,13 @@
             </div>
             <div class="popupContent">
                 <h3 class="header">Confirmation</h3>
-                <p>Are you sure you want to delete the <span id="contact-name-placeholder"></span> contact point?</p>
+                <p>Are you sure you want to delete the <strong id="contact-name-placeholder"></strong> contact point?</p>
                 <button type="button" id="cancel-btn">Cancel</button>
                 <button type="button" id="delete-btn">Delete</button>
             </div>
             <div class="delete-dialog">
                 <h3 class="header">Cannot delete contact point</h3>
-                <p>The contact point named <span id="contact-name-placeholder-delete-dialog"></span> is currently in use by multiple alerts.</p>
+                <p>The contact point named <strong id="contact-name-placeholder-delete-dialog"></strong> is currently in use by multiple alerts.</p>
                 <button type="button" id="cancel-btn">Close</button>
             </div>
         </div>
