minion-searches has been change

--- a/static/minion-searches.html
+++ b/static/minion-searches.html
@@ -47,24 +47,35 @@
         <div id="dashboard">
             <div class="logminion-container">
                 <div class="pane-1">
-                    <h1 class="main-heading">Minion Searches</h1>
+                    <h1 class="main-heading"><u>Minion Searches</u></h1>
                     <div class="log-pane">
+                       <ul id="button-list">
+                        <li> 
                         <button id="error">
                             <h3>Error</h3>
                             <h4>0</h4>
                         </button>
+                     </li> 
+                         <li> 
                         <button id="warning">
                             <h3>Warning</h3>
                             <h4>0</h4>
-                        </button>
+                        </button></li>
+                         <li> 
                         <button id="debug">
                             <h3>Debug</h3>
                             <h4>0</h4>
                         </button>
+                     </li>
+                    <li> 
                         <button id="info">
                             <h3>Info</h3>
                             <h4>0</h4>
                         </button>
+                     </li>
+                </ul>  
+
+
                     </div>
                 </div>
                 <div class="minion-searches-pane">
