--- a/static/index.html
+++ b/static/index.html
@@ -164,7 +164,7 @@
                 <div id="save-query-div">
                     <button class="btn" id="saveq-btn">Save Query</button>
                     <button class="btn" id="add-logs-to-db-btn" class="mx-3"><span><img
-                                src="./assets/dashbaord-white-icon.svg" alt=""></span></button>
+                                src="./assets/dashbaord-white-icon.svg" alt=""/></span></button>
                     <button class="btn mx-2" id="alert-from-logs-btn"><span><img src="./assets/alerting-white-icon.svg"
                                 alt=""></span></button>
                 </div>
