add tooltip on the bell icon

--- a/static/index.html
+++ b/static/index.html
@@ -226,7 +226,7 @@
                 <div id="save-query-div" class="save-query-div">
                     <button class="btn saveq-btn below-btn-img" id="saveq-btn"></button>
                     <button class="btn add-logs-to-db-btn below-btn-img" id="add-logs-to-db-btn" class="mx-3"></button>
-                    <button class="btn mx-2 alert-from-logs-btn below-btn-img" id="alert-from-logs-btn"></button>
+                    <button class="btn mx-2 alert-from-logs-btn below-btn-img" id="alert-from-logs-btn" title="Create alert in a new tab"></button>
                     <div class="dropdown download-btn">
                         <button class="btn dropdown-toggle download-all-logs-btn below-btn-img" type="button" data-toggle="dropdown" aria-haspopup="true"
                             aria-expanded="false" data-bs-toggle="dropdown" title="Select Query Type">
