--- a/static/metrics.html
+++ b/static/metrics.html
@@ -70,12 +70,13 @@
                         <img class="dropdown-arrow blue" src="assets/up-arrow-btn-light-theme.svg">
                     </button>
                     <div class="dropdown-menu daterangepicker" aria-labelledby="index-btn" id="daterangepicker ">
-                        <p class="dt-header">Search the last</p>
+                        <h6 class="search">Search the last</h6>
                         <div class="ranges">
                             <div class="inner-range">
-                                <div id="now-5m" class="range-item ">5 Mins</div>
+                               <div id="now-5m" class="range-item ">5 Mins</div>
                                 <div id="now-3h" class="range-item">3 Hrs</div>
-                                <div id="now-2d" class="range-item">2 Days</div>
+                                <div id="now-2d" class="range-item">2 Days</div> 
+                            
                             </div>
                             <div class="inner-range">
                                 <div id="now-15m" class="range-item">15 Mins</div>
