custom search style.css add

--- a/static/metrics.html
+++ b/static/metrics.html
@@ -95,7 +95,7 @@
                             </div>
                             <hr>
                             </hr>
-                            <div class="dt-header">Custom Search <span id="reset-timepicker" type="reset">Reset</span>
+                            <div class="custom-search">Custom Search <span id="reset-timepicker" type="reset">Reset</span>
                             </div>
                             <div id="daterange-from"> <span id="dt-from-text"> From</span> <br />
                                 <input type="date" id="date-start" />
