--- a/static/service-health-graphs.html
+++ b/static/service-health-graphs.html
@@ -1,5 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5SBJC04YFB"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+    
+        gtag('config', 'G-5SBJC04YFB');
+    </script>
 <head>
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
